# gbfs-validator-java/src/main/java/org/entur/gbfs/validation/model/SystemError.java
@@ -1,0 +1,5 @@
+package org.entur.gbfs.validation.model;
+
+public record SystemError(String error, String message) {
+    // No additional body needed for a simple record
+}
